--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyle Website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500;600;700;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">-->
 </head>
 
 <body>
@@ -31,11 +27,11 @@
                 <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
                     Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
                 <ul class="list">
-                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simple</li>
-                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief.</li>
-                    <li><i class="fa-solid fa-check"></i>Contrary to popular , is not simply.</li>
-                    <li><i class="fa-solid fa-check"></i>Contrary to popular belief, is not simply.</li>
-                    <li><i class="fa-solid fa-check"></i>Contrary to popular simply.</li>
+                    <li><span class="ul-list">&#10003</span> Contrary to popular belief, is not simple</li>
+                    <li><span class="ul-list">&#10003</span> Contrary to popular belief.</li>
+                    <li><span class="ul-list">&#10003</span> Contrary to popular , is not simply.</li>
+                    <li><span class="ul-list">&#10003</span> Contrary to popular belief, is not simply.</li>
+                    <li><span class="ul-list">&#10003</span> Contrary to popular simply.</li>
                 </ul>
             </div>
         </section>
@@ -64,13 +60,13 @@
                 </div>
             </div>
         </section>
-        <section class="cta">
+        <section class="call-section">
             <h2>Awlays keep a positive<br> mindset</h2>
-            <button class="btn"><a href="#">Call Now</a></button>
+            <button class="btn"></a>Call Now</button>
         </section>
     </main>
     <footer>
-        <div class="footer-left">
+        <div class="contact-left">
             <h2>Future</h2>
             <p>There are many variations of passages of Lorem Ipsum
                 available, but the majority have suffered alteration in some
@@ -78,22 +74,22 @@
                 <br>
                 <div class="contact-info">
                     <p>
-                        Email : info@developersajeeb.com
+                        Email : irfankkhhan14@gmail.com
                         <br>
-                        Phone : +8801743370840
+                        Phone : +8801749-545031
                     </p>
                 </div>
             </p>
-            <div class="social">
+            <div class="social-image">
                 <img src="images/icons/fb.png" alt="Facebook">
                 <img src="images/icons/twitter.png" alt="Twitter">
                 <img src="images/icons/youtube.png" alt="YouTube">
             </div>
         </div>
-        <div class="newslatter">
+        <div class="subscribe">
             <h3>Subscribe</h3>
             <input type="email" name="" id="" placeholder="Enter your email">
-            <input class="btn cta-btn" type="button" value="Subscribe">
+            <input class="btn subs-btn" type="button" value="Subscribe">
         </div>
     </footer>
 
