final change ready for submit

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lifestyle Website</title>
     <link rel="stylesheet" href="style.css">
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">-->
 </head>
 
 <body>
@@ -24,7 +23,8 @@
             </div>
             <div class="img-text">
                 <h2>My failures of previous year</h2>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    classical
                     Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
                 <ul class="list">
                     <li><span class="ul-list">&#10003</span> Contrary to popular belief, is not simple</li>
@@ -72,13 +72,13 @@
                 available, but the majority have suffered alteration in some
                 form, by injected humour, or randomised words
                 <br>
-                <div class="contact-info">
-                    <p>
-                        Email : irfankkhhan14@gmail.com
-                        <br>
-                        Phone : +8801749-545031
-                    </p>
-                </div>
+            <div class="contact-info">
+                <p>
+                    Email : irfankkhhan14@gmail.com
+                    <br>
+                    Phone : +8801749-545031
+                </p>
+            </div>
             </p>
             <div class="social-image">
                 <img src="images/icons/fb.png" alt="Facebook">
@@ -88,8 +88,8 @@
         </div>
         <div class="subscribe">
             <h3>Subscribe</h3>
-            <input type="email" name="" id="" placeholder="Enter your email">
-            <input class="btn subs-btn" type="button" value="Subscribe">
+            <span class="email"><input type="email" name="" id="" placeholder="Enter your email"></span>
+            <input class="subs-btn" type="button" value="Subscribe">
         </div>
     </footer>
 
