--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 
 <body>
     <header>
+
+        <!--Website Header Section-->
         <h1>All Thinks Are Possible If You believe</h1>
         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in
             some form, by injected humour, or randomised words</p>
-        <button class="btn"><a href="#">Contact Us</a></button>
+        <button class="btn">Contact Us</a></button>
     </header>
     <main>
+
+        <!--My previous year history-->
         <section class="about">
             <div class="img-left">
                 <img src="images/person.png" alt="Person">
@@ -35,6 +39,8 @@
                 </ul>
             </div>
         </section>
+
+        <!--My future plan section-->
         <section class="my-plans">
             <h2>My Plans</h2>
             <div class="my-plans-item">
@@ -65,7 +71,10 @@
             <button class="btn"></a>Call Now</button>
         </section>
     </main>
+
+    <!--My & Client info-->
     <footer>
+        <!--Contact Section-->
         <div class="contact-left">
             <h2>Future</h2>
             <p>There are many variations of passages of Lorem Ipsum
@@ -80,12 +89,14 @@
                 </p>
             </div>
             </p>
+            <!--Social Contact info with icon-->
             <div class="social-image">
                 <img src="images/icons/fb.png" alt="Facebook">
                 <img src="images/icons/twitter.png" alt="Twitter">
                 <img src="images/icons/youtube.png" alt="YouTube">
             </div>
         </div>
+        <!--client email-->
         <div class="subscribe">
             <h3>Subscribe</h3>
             <span class="email"><input type="email" name="" id="" placeholder="Enter your email"></span>
